@startuml

title __NOTIFICATIONS's Class Diagram__\n

  namespace com.architectica.socialcomponents {
    namespace main.main {
      namespace Notifications {
        class com.architectica.socialcomponents.main.main.Notifications.NotificationsFragment {
            - counterAnimationInProgress : boolean
            - newPostsCounterTextView : TextView
            - progressBar : ProgressBar
            - recyclerView : RecyclerView
            - swipeContainer : SwipeRefreshLayout
            + NotificationsFragment()
            + createPresenter()
            + hideCounterView()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
            + onResume()
            + openPostDetailsActivity()
            + openProfileActivity()
            + refreshPostList()
            + showCounterView()
            + showFloatButtonRelatedSnackBar()
            - initContentView()
            - initPostCounter()
            - initPostListRecyclerView()
        }
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.main {
      namespace Notifications {
        class com.architectica.socialcomponents.main.main.Notifications.NotificationsPresenter {
            + NotificationsPresenter()
            + initPostCounter()
            ~ onPostClicked()
            ~ updateNewPostCounter()
        }
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.main {
      namespace Notifications {
        interface com.architectica.socialcomponents.main.main.Notifications.NotificationsView {
            {abstract} + hideCounterView()
            {abstract} + openPostDetailsActivity()
            {abstract} + openProfileActivity()
            {abstract} + refreshPostList()
            {abstract} + showCounterView()
            {abstract} + showFloatButtonRelatedSnackBar()
        }
      }
    }
  }
  

  com.architectica.socialcomponents.main.main.Notifications.NotificationsFragment .up.|> com.architectica.socialcomponents.main.main.Notifications.NotificationsView
  com.architectica.socialcomponents.main.main.Notifications.NotificationsFragment -up-|> com.architectica.socialcomponents.main.base.BaseFragment
  com.architectica.socialcomponents.main.main.Notifications.NotificationsFragment o-- com.architectica.socialcomponents.adapters.NotificationsAdapter : postsAdapter
  com.architectica.socialcomponents.main.main.Notifications.NotificationsPresenter -up-|> com.architectica.socialcomponents.main.base.BasePresenter
  com.architectica.socialcomponents.main.main.Notifications.NotificationsPresenter o-- com.architectica.socialcomponents.managers.PostManager : postManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
